--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.11:
+  - Implement check_balance. Returns the balance of your NTD account.
+
 0.10:
   - check_balance function isn't working anymore. (Has been broken for a while since they updated their website)
   - Add currency_exchange_rate function
